--- a/src/info.plist
+++ b/src/info.plist
@@ -113,11 +113,60 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
+				<string>D9A33F6E-4CCA-4C52-9064-0A71529B26F8</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>D9A33F6E-4CCA-4C52-9064-0A71529B26F8</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>35C9CF21-8C3A-4CEB-AFEC-0DA08ED7D3CB</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>sourceoutputuid</key>
+				<string>298D37E2-5DF5-4CC9-AC1E-975328E6FF60</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
 				<string>582F3D94-E0EA-4181-8A7F-BA9C87AC9C08</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>3F5B4A74-E524-4ADE-B5FF-1E481FCAB6F5</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>sourceoutputuid</key>
+				<string>FC22BDD2-0870-4886-8B58-7D306E8EE9FF</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>5220E64D-387E-4FA5-AE40-51937778C9FB</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>sourceoutputuid</key>
+				<string>F468ECAB-7285-4D5D-806F-5C3765EED841</string>
 				<key>vitoclose</key>
 				<false/>
 			</dict>
@@ -270,6 +319,64 @@
 			<string>alfred.workflow.utility.conditional</string>
 			<key>uid</key>
 			<string>7146D7E9-9CC8-4AB4-A4CD-DE15B707908C</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>conditions</key>
+				<array>
+					<dict>
+						<key>inputstring</key>
+						<string></string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>0</integer>
+						<key>matchstring</key>
+						<string>settings</string>
+						<key>outputlabel</key>
+						<string>open settings</string>
+						<key>uid</key>
+						<string>298D37E2-5DF5-4CC9-AC1E-975328E6FF60</string>
+					</dict>
+					<dict>
+						<key>inputstring</key>
+						<string></string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>0</integer>
+						<key>matchstring</key>
+						<string>express</string>
+						<key>outputlabel</key>
+						<string>start express init</string>
+						<key>uid</key>
+						<string>F468ECAB-7285-4D5D-806F-5C3765EED841</string>
+					</dict>
+					<dict>
+						<key>inputstring</key>
+						<string></string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>0</integer>
+						<key>matchstring</key>
+						<string>KEEPASSXC_MASTER_PASSWORD</string>
+						<key>outputlabel</key>
+						<string>ask password</string>
+						<key>uid</key>
+						<string>FC22BDD2-0870-4886-8B58-7D306E8EE9FF</string>
+					</dict>
+				</array>
+				<key>elselabel</key>
+				<string>fetch</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.conditional</string>
+			<key>uid</key>
+			<string>D9A33F6E-4CCA-4C52-9064-0A71529B26F8</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -664,7 +771,7 @@
 			<key>note</key>
 			<string>Calls the first workflow item. User will return to search with his query.</string>
 			<key>xpos</key>
-			<integer>810</integer>
+			<integer>985</integer>
 			<key>ypos</key>
 			<integer>35</integer>
 		</dict>
@@ -689,7 +796,7 @@
 		<key>582F3D94-E0EA-4181-8A7F-BA9C87AC9C08</key>
 		<dict>
 			<key>xpos</key>
-			<integer>690</integer>
+			<integer>865</integer>
 			<key>ypos</key>
 			<integer>90</integer>
 		</dict>
@@ -714,7 +821,7 @@
 			<key>note</key>
 			<string>Copies a selected attribute to clipboard</string>
 			<key>xpos</key>
-			<integer>790</integer>
+			<integer>965</integer>
 			<key>ypos</key>
 			<integer>165</integer>
 		</dict>
@@ -744,6 +851,13 @@
 			<integer>520</integer>
 			<key>ypos</key>
 			<integer>70</integer>
+		</dict>
+		<key>D9A33F6E-4CCA-4C52-9064-0A71529B26F8</key>
+		<dict>
+			<key>xpos</key>
+			<integer>690</integer>
+			<key>ypos</key>
+			<integer>60</integer>
 		</dict>
 		<key>F51F13EF-FFAE-46EB-A4E1-2282CE664D61</key>
 		<dict>
