--- a/src/info.plist
+++ b/src/info.plist
@@ -25,6 +25,18 @@
 			</dict>
 			<dict>
 				<key>destinationuid</key>
+				<string>1F3CC929-CA46-411B-BD67-A40AABFBB308</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>sourceoutputuid</key>
+				<string>2C72E4DD-C25B-4BEB-9590-7A07E0E5E380</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
 				<string>9131D8B1-D408-4126-91D4-88493D169CE2</string>
 				<key>modifiers</key>
 				<integer>0</integer>
@@ -313,12 +325,12 @@
 					</dict>
 				</array>
 				<key>elselabel</key>
-				<string>search</string>
+				<string>continue</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.utility.conditional</string>
 			<key>uid</key>
-			<string>7146D7E9-9CC8-4AB4-A4CD-DE15B707908C</string>
+			<string>D9A33F6E-4CCA-4C52-9064-0A71529B26F8</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -371,12 +383,12 @@
 					</dict>
 				</array>
 				<key>elselabel</key>
-				<string>fetch</string>
+				<string>search</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.utility.conditional</string>
 			<key>uid</key>
-			<string>D9A33F6E-4CCA-4C52-9064-0A71529B26F8</string>
+			<string>7146D7E9-9CC8-4AB4-A4CD-DE15B707908C</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -495,9 +507,23 @@
 						<key>uid</key>
 						<string>298D37E2-5DF5-4CC9-AC1E-975328E6FF60</string>
 					</dict>
+					<dict>
+						<key>inputstring</key>
+						<string>{var:USER_ACTION}</string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>0</integer>
+						<key>matchstring</key>
+						<string>mod</string>
+						<key>outputlabel</key>
+						<string>mod</string>
+						<key>uid</key>
+						<string>2C72E4DD-C25B-4BEB-9590-7A07E0E5E380</string>
+					</dict>
 				</array>
 				<key>elselabel</key>
-				<string>search</string>
+				<string>copy</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.utility.conditional</string>
@@ -525,6 +551,25 @@
 			<string>FB76DBD5-26A5-444E-9A47-ABC54F61E804</string>
 			<key>version</key>
 			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>autopaste</key>
+				<true/>
+				<key>clipboardtext</key>
+				<string>{query}</string>
+				<key>ignoredynamicplaceholders</key>
+				<false/>
+				<key>transient</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.clipboard</string>
+			<key>uid</key>
+			<string>1F3CC929-CA46-411B-BD67-A40AABFBB308</string>
+			<key>version</key>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -757,6 +802,15 @@
 			<key>ypos</key>
 			<integer>865</integer>
 		</dict>
+		<key>1F3CC929-CA46-411B-BD67-A40AABFBB308</key>
+		<dict>
+			<key>note</key>
+			<string>Copies a selected attribute to clipboard and pastes to front most app</string>
+			<key>xpos</key>
+			<integer>1010</integer>
+			<key>ypos</key>
+			<integer>145</integer>
+		</dict>
 		<key>35C9CF21-8C3A-4CEB-AFEC-0DA08ED7D3CB</key>
 		<dict>
 			<key>note</key>
@@ -771,9 +825,9 @@
 			<key>note</key>
 			<string>Calls the first workflow item. User will return to search with his query.</string>
 			<key>xpos</key>
-			<integer>985</integer>
+			<integer>1030</integer>
 			<key>ypos</key>
-			<integer>35</integer>
+			<integer>10</integer>
 		</dict>
 		<key>3F5B4A74-E524-4ADE-B5FF-1E481FCAB6F5</key>
 		<dict>
@@ -821,9 +875,9 @@
 			<key>note</key>
 			<string>Copies a selected attribute to clipboard</string>
 			<key>xpos</key>
-			<integer>965</integer>
+			<integer>1010</integer>
 			<key>ypos</key>
-			<integer>165</integer>
+			<integer>325</integer>
 		</dict>
 		<key>C5304F2E-3703-45AE-985B-3D66C24D07E4</key>
 		<dict>
