--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pytest==4.6.11
-pytest-mock==2.0.0
-pytest-cov==2.12.1
+pytest==7.1.11
+pytest-mock==3.7.0
+pytest-cov==5.10.1
 isort==4.3.21
+ipython==8.1.1
