--- a/src/info.plist
+++ b/src/info.plist
@@ -75,6 +75,18 @@
 			</dict>
 			<dict>
 				<key>destinationuid</key>
+				<string>EEA7506E-4E4B-4D12-BBFC-3A2D30BB5BDD</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>sourceoutputuid</key>
+				<string>088FE1D5-98DC-4B23-AD54-D43BD82D6020</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
 				<string>1F3CC929-CA46-411B-BD67-A40AABFBB308</string>
 				<key>modifiers</key>
 				<integer>0</integer>
@@ -390,6 +402,29 @@
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>concurrently</key>
+				<true/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>osascript -l JavaScript settings.js showMessage "$1"</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>EEA7506E-4E4B-4D12-BBFC-3A2D30BB5BDD</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>conditions</key>
 				<array>
 					<dict>
@@ -645,11 +680,25 @@ $python_path cli.py fetch "${KP_ITEM_PATH}"</string>
 						<key>matchmode</key>
 						<integer>0</integer>
 						<key>matchstring</key>
-						<string>mod</string>
+						<string>cmd</string>
 						<key>outputlabel</key>
-						<string>mod</string>
+						<string>cmd</string>
 						<key>uid</key>
 						<string>2C72E4DD-C25B-4BEB-9590-7A07E0E5E380</string>
+					</dict>
+					<dict>
+						<key>inputstring</key>
+						<string>{var:USER_ACTION}</string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>0</integer>
+						<key>matchstring</key>
+						<string>alt_notes</string>
+						<key>outputlabel</key>
+						<string>alt_notes</string>
+						<key>uid</key>
+						<string>088FE1D5-98DC-4B23-AD54-D43BD82D6020</string>
 					</dict>
 					<dict>
 						<key>inputstring</key>
@@ -1247,6 +1296,15 @@ $python_path cli.py totp "${KP_ITEM_PATH}"</string>
 			<key>ypos</key>
 			<integer>60</integer>
 		</dict>
+		<key>EEA7506E-4E4B-4D12-BBFC-3A2D30BB5BDD</key>
+		<dict>
+			<key>note</key>
+			<string>Show message in modal window</string>
+			<key>xpos</key>
+			<integer>1230</integer>
+			<key>ypos</key>
+			<integer>35</integer>
+		</dict>
 		<key>F51F13EF-FFAE-46EB-A4E1-2282CE664D61</key>
 		<dict>
 			<key>note</key>
@@ -1319,10 +1377,10 @@ $python_path cli.py totp "${KP_ITEM_PATH}"</string>
 	</dict>
 	<key>variablesdontexport</key>
 	<array>
-		<string>keepassxc_db_path</string>
+		<string>clipboard_timeout</string>
 		<string>show_totp_request</string>
 		<string>keepassxc_master_password</string>
-		<string>keychain_service</string>
+		<string>entry_delimiter</string>
 		<string>show_unfilled_attributes</string>
 		<string>show_attribute_values</string>
 		<string>keychain_account</string>
@@ -1331,8 +1389,8 @@ $python_path cli.py totp "${KP_ITEM_PATH}"</string>
 		<string>python_path</string>
 		<string>desired_attributes</string>
 		<string>show_passwords</string>
-		<string>clipboard_timeout</string>
-		<string>entry_delimiter</string>
+		<string>keepassxc_db_path</string>
+		<string>keychain_service</string>
 	</array>
 	<key>version</key>
 	<string>2.1.0</string>
