Add the ability to check the workflow's updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pytest==7.1.11
+pytest==7.1.1
 pytest-mock==3.7.0
-pytest-cov==5.10.1
-isort==4.3.21
+pytest-cov==3.0.0
+isort==5.10.1
 ipython==8.1.1
 mypy==0.941
 black==22.1.0
 flake8==4.0.1
 autoflake==1.4
+freezegun==1.2.1
